--- a/UKTrains.WP7/MainAndFilterPage.xaml
+++ b/UKTrains.WP7/MainAndFilterPage.xaml
@@ -28,31 +28,28 @@
                 <Button Tap="OnStationClick"
                         Padding="0"
                         Margin="0"
+                        HorizontalAlignment="Left"
                         BorderThickness="0">
                     <Grid Margin="0,0,0,4">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="90"/>
-                            <ColumnDefinition Width="360"/>
+                            <ColumnDefinition Width="80"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Text="{Binding Item1}"
                                    Foreground="CornflowerBlue" 
                                    VerticalAlignment="Center"
-                                   HorizontalAlignment="Left"/>
-                        <Grid Grid.Column="1">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="Auto" />
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Text="{Binding Item2.Name}"
-                                       TextWrapping="Wrap"
-                                       TextAlignment="Center"
-                                       FontSize="34" />
-                            <TextBlock Text="{Binding Item2.Code}" 
-                                       Grid.Column="1"
-                                       Margin="12,0,0,0"
-                                       VerticalAlignment="Bottom"
-                                       Foreground="Gray" />
-                        </Grid>
+                                   HorizontalAlignment="Right" />
+                        <TextBlock Text="{Binding Item2.Name}"
+                                   Grid.Column="1"
+                                   TextWrapping="Wrap"
+                                   TextAlignment="Center"
+                                   Margin="12,0"
+                                   FontSize="34" />
+                        <TextBlock Text="{Binding Item2.Code}" 
+                                   Grid.Column="2"                                   
+                                   VerticalAlignment="Bottom"
+                                   Foreground="Gray" />
                     </Grid>
                 </Button>
             </DataTemplate>
