--- a/UKTrains.WP7/DetailsPage.xaml
+++ b/UKTrains.WP7/DetailsPage.xaml
@@ -97,7 +97,8 @@
                     </ItemsControl>
                     <TextBlock x:Name="journeyElementsMessageTextBlock" 
                                TextWrapping="Wrap"
-                               Margin="12,220,12,0"
+                               Margin="12,12,12,48"
+                               VerticalAlignment="Center"
                                HorizontalAlignment="Center" />
                     <TextBlock x:Name="journeyElementsLastUpdatedTextBlock" 
                                VerticalAlignment="Top"
