--- a/UKTrains.WP7/StationPage.xaml
+++ b/UKTrains.WP7/StationPage.xaml
@@ -112,7 +112,8 @@
                     </ItemsControl>
                     <TextBlock x:Name="departuresMessageTextBlock" 
                                TextWrapping="Wrap"
-                               Margin="12,220,12,0"
+                               Margin="12,12,12,48"
+                               VerticalAlignment="Center"
                                HorizontalAlignment="Center" />
                     <TextBlock x:Name="departuresLastUpdatedTextBlock" 
                                VerticalAlignment="Top"
@@ -140,7 +141,8 @@
                     </ItemsControl>
                     <TextBlock x:Name="arrivalsMessageTextBlock" 
                                TextWrapping="Wrap"
-                               Margin="12,220,12,0"
+                               Margin="12,12,12,48"
+                               VerticalAlignment="Center"
                                HorizontalAlignment="Center" />
                     <TextBlock x:Name="arrivalsLastUpdatedTextBlock" 
                                VerticalAlignment="Top"
