Only load arrivals when swiping to the arrivals list

--- a/UKTrains.WP7/StationPage.xaml
+++ b/UKTrains.WP7/StationPage.xaml
@@ -92,7 +92,7 @@
             </DataTemplate>
         </Grid.Resources>
 
-        <controls:Pivot x:Name="pivot">
+        <controls:Pivot x:Name="pivot" SelectionChanged="OnPivotSelectionChanged">
             <controls:PivotItem Header="Departures">
                 <Grid>
                     <ItemsControl x:Name="departures" 
