Refactor application bar

--- a/LearnOnTheGo.WP7/MainPage.xaml
+++ b/LearnOnTheGo.WP7/MainPage.xaml
@@ -106,11 +106,8 @@
     </Grid>
 
     <phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar Opacity="0.7">
+        <shell:ApplicationBar>
             <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.refresh.png" Text="Refresh" Click="OnRefreshClick"/>
-            <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.settings.png" Text="Settings" Click="OnSettingsClick"/>
-            <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.star.png" Text="Rate and Review" Click="OnRateAndReviewClick"/>
-            <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.reply.email.png" Text="Give Feedback" Click="OnGiveFeedbackClick"/>
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
 
