--- a/UKTrains.WP8/StationPage.xaml
+++ b/UKTrains.WP8/StationPage.xaml
@@ -10,6 +10,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     xmlns:src="clr-namespace:UKTrains"
+    xmlns:nationalRail="clr-namespace:NationalRail;assembly=NationalRail"
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="696"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -95,8 +96,10 @@
         <controls:Pivot x:Name="pivot" SelectionChanged="OnPivotSelectionChanged">
             <controls:PivotItem Header="Departures">
                 <Grid>
-                    <ItemsControl x:Name="departures" 
-                                    ItemTemplate="{StaticResource departureTemplate}">
+                    <ItemsControl x:Name="departures"
+                                  d:DataContext="{d:DesignInstance IsDesignTimeCreatable=True, Type=nationalRail:SampleData}"
+                                  ItemsSource="{Binding Departures}"
+                                  ItemTemplate="{StaticResource departureTemplate}">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <VirtualizingStackPanel />
@@ -125,6 +128,8 @@
             <controls:PivotItem Header="Arrivals">
                 <Grid>
                     <ItemsControl x:Name="arrivals" 
+                                  d:DataContext="{d:DesignInstance IsDesignTimeCreatable=True, Type=nationalRail:SampleData}"
+                                  ItemsSource="{Binding Arrivals}"
                                   ItemTemplate="{StaticResource departureTemplate}">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
